--- a/OGV/client/templates/uploader.html
+++ b/OGV/client/templates/uploader.html
@@ -1,7 +1,8 @@
 <template name="uploader">
 	<form id="upload" action="/upload" method="POST" enctype="multipart/form-data">
 		<input class="form-control" type="hidden" id="MAX_FILE_SIZE" name="MAX_FILE_SIZE" value="300000" />
-		<input class="form-control" type="file" id="uploader-fileselect" name="fileselect[]" multiple="multiple" />
+		<input class="form-control" type="file" id="uploader-fileselect" name="fileselect[]" />
        		<button class="btn btn-primary" type="submit" id="uplaoder-button"> Upload </button>
 	</form>
+
 </template>
