--- a/OGV/client/templates/authentication/forgotpassword.html
+++ b/OGV/client/templates/authentication/forgotpassword.html
@@ -1,7 +1,7 @@
 <template name="forgotPassword">
 	<div class="forgot-password" id="forgot-password">
-		<a id = "return-to-log-in" href="javascript:void(0);"> Login </a>
-		
+		<a class = "meta-links"  id = "return-to-log-in" href="log-in"> Login </a>
+		<a class = "meta-links" id="show-sign-up" href="sign-up" > Sign Up </a>
 		<form action="/forgot" class="primary-form" id="forgot-password-form" method="post">
 			<input class="form-control email" id="forgot-password-email" type="text" name="email" placeholder="Email Address">
 			<button class="btn btn-default" type="submit"> Change Password </button>
