added basic styling

--- a/OGV/client/styles/styles.css
+++ b/OGV/client/styles/styles.css
@@ -1,1 +1,51 @@
+@import url(http://fonts.googleapis.com/css?family=Megrim);
+@import url(http://fonts.googleapis.com/css?family=Open+Sans);
+body {
+	background:#fafafa;
+	font-family:'open sans', sans-serif;
+	font-size:16px;
+}
 
+
+.page-container {
+	max-width:900px;
+	margin:auto;
+}
+
+.wrapper {
+	margin-top:20px;
+}
+
+.universal-header {
+	width:100%;
+	height: 40px;
+	background:#555;
+}
+
+#header-logo {
+	font-family:'Megrim',cursive;
+	padding:5px 5px;
+	display:inline-block;
+	background:#e74c3c;
+	height: 40px;
+	font-size:24px;
+	line-height: 45px;
+	color:#fff;
+	text-shadow:1px 1px rgba(0,0,0,0.5);
+}
+
+#header-logo:hover {
+	text-decoration:none;
+}
+
+.ogv-status{
+	max-width: 400px;
+	margin:auto;
+	background:rgba(0,0,0,0.3);
+	color:#fff;
+	text-shadow:1px 1px rgba(0,0,0,0.5);
+	text-align:center;
+	border-radius:5px;
+	line-height:30px;
+}
+	
