styled all the authentication forms

--- a/OGV/client/templates/authentication/forgotpassword.html
+++ b/OGV/client/templates/authentication/forgotpassword.html
@@ -1,11 +1,12 @@
 <template name="forgotPassword">
-	<div class="forgot-password" id="forgot-password">
-		<a class = "meta-links"  id = "return-to-log-in" href="log-in"> Login </a>
-		<a class = "meta-links" id="show-sign-up" href="sign-up" > Sign Up </a>
+	<div class="primary-container" id="forgot-password">
+		{{> primaryBranding}}
 		<form action="/forgot" class="primary-form" id="forgot-password-form" method="post">
 			<input class="form-control email" id="forgot-password-email" type="text" name="email" placeholder="Email Address">
-			<button class="btn btn-default" type="submit"> Change Password </button>
+			<button class="btn btn-default primary-btn" type="submit"> Change Password </button>
 		</form>
 	
+		<a class = "meta-links"  id = "return-to-log-in" href="log-in"> Login </a>
+		<a class = "meta-links" id="show-sign-up" href="sign-up" > Sign Up </a>
 	</div>
 </template>
