--- a/OGV/client/templates/authentication/resetpassword.html
+++ b/OGV/client/templates/authentication/resetpassword.html
@@ -1,12 +1,10 @@
 <template name="resetPassword">
-	<div class="reset-password">
-		<h2 class="headline" id="reset-password-headline"> Changing password, eh ? </h2>
-		<h3 class="details" id="reset-password-details"> Just type your new password twice, and we will change it </h3>
+	<div class="reset-password primary-container">
 		
 		<form action="/reset-password" class="primary-form" id="reset-password-form" method="post">
 			<input class="password form-control" id="reset-password-password" name="password" placeholder=" Your new password " type="password">
 			<input class="password form-control" id="reset-pasword-confirm" name="passwordConfirm" placeholder= "Retype your password" type="password">
-			<button class="btn btn-default" type="submit"> Reset Password </button>
+			<button class="btn primary-btn btn-default" type="submit"> Reset Password </button>
 		</form>
 	</div>
 </template>
