--- a/OGV/client/templates/authentication/signup.html
+++ b/OGV/client/templates/authentication/signup.html
@@ -1,16 +1,17 @@
 <template name="signUp">
 	{{#unless currentUser}}
-	<div class="primary-section" id="sign-up-container">
-		
-		<a class = "meta-links" id="show-log-in" href="log-in" > Log In </a>
-		<a class = "meta-links" id="show-forgot-password" href="forgot-password" > Forgot Password </a>
+	<div class="primary-container" id="sign-up-container">
+		{{> primaryBranding}}	
 		<form action="/sign-up" class="primary-form" id="sign-up-form" method="post">
 			<input class="form-control email" id="sign-up-email" name="email" placeholder="Your email address" type="email">
 			<input class="form-control username" id="sign-up-username" name="username" placeholder="Your user name" type="text">
 			<input class="form-control password" id="sign-up-password" name="password" placeholder="Your new password" type="password">
 			<input class="form-control password" id="sign-up-password-confirm" name="password-confirm" placeholder= "Confirm your password" type="password">
-			<button class="btn btn-default" type="submit"> Sign Up </button>
+			<button class="btn primary-btn btn-default" type="submit"> Sign Up </button>
 		</form>
+		
+		<a class = "meta-links" id="show-log-in" href="log-in" > Log In </a>
+		<a class = "meta-links" id="show-forgot-password" href="forgot-password" > Forgot Password </a>
 	</div>
 	{{else}}
 		{{> logOut}}
