--- a/OGV/client/styles/styles.css
+++ b/OGV/client/styles/styles.css
@@ -6,6 +6,15 @@ body {
 	font-size:16px;
 }
 
+a {
+	color:#e74c3c;
+}
+
+a:hover {
+	color:#f74c3c;
+	text-decoration: none;
+	border-bottom: 1px dashed #e74c3c;
+}
 
 .page-container {
 	max-width:900px;
@@ -48,4 +57,53 @@ body {
 	border-radius:5px;
 	line-height:30px;
 }
-	
+
+.primary-container {
+	max-width:280px;
+	margin:auto;
+	margin-top:10%;
+}
+
+.primary-form input, .primary-form button {
+	display:block;
+	width:100%;
+	height: 40px;
+	line-height:40px;
+	margin-top:20px;
+	border-radius:0px;
+	box-shadow:none;
+	text-align: center;
+	border:0px;
+	border-left: 1px solid #e74c3c;
+	padding:0px 0px;
+	font-family: 'open sans',sans-serif;
+}
+
+.primary-btn {
+	background:#e74c3c;
+	font-size: 20px;
+	padding:0px 0px;
+	color: #fff;
+	width:250px;
+	text-shadow: 0px 0px;
+}
+
+.primary-btn:hover {
+	color:#fff;
+	background:#e75c4c;
+}
+.primary-branding {
+	font-size: 24px;
+	font-family: 'megrim',cursive;
+	font-weight:normal;
+	text-align:center;
+}
+input:focus {
+	box-shadow: none;
+}
+
+.meta-links {
+	font-size:14px;
+	margin-top:20px;
+	display:block;
+}	
