--- a/OGV/client/templates/authentication/login.html
+++ b/OGV/client/templates/authentication/login.html
@@ -1,13 +1,14 @@
 <template name="logIn">
 	{{#unless currentUser}}
 	<div class="primary-container" id="log-in-container">
+		<h2 class="primary-branding"> Online Geometry Viewer </h2>
+		<form action="/login" class=" primary-form log-in-form" id="log-in-form" method="post">
+			<input class="primary-input email" id="log-in-email" type="email" name="email" placeholder="your email address here" >
+			<input class= "primary-input password" id="log-in-password" type="password" name="password" placeholder="password">
+			<button class="btn btn-default primary-input primary-btn" type="submit"> Log In </button>
+		</form>
 		<a class = "meta-links" id="show-forgot-password" href="forgot-password" > Forgot Password </a>
 		<a class = "meta-links" id="show-sign-up" href="sign-up" > Sign Up </a>
-		<form action="/login" class="log-in-form" id="log-in-form" method="post">
-			<input class="form-control email" id="log-in-email" type="email" name="email" placeholder="email@domain.tld" >
-			<input class="form-control password" id="log-in-password" type="password" name="password" placeholder="*********">
-			<button class="btn btn-default" type="submit"> Log In </button>
-		</form>
 	</div>
 	{{else}}
 		{{>logOut}}
