added styles to filemanager

--- a/OGV/client/styles/styles.css
+++ b/OGV/client/styles/styles.css
@@ -16,6 +16,9 @@ a:hover {
 	border-bottom: 1px dashed #e74c3c;
 }
 
+h2 {
+	color:#e74c3c;
+}
 .page-container {
 	max-width:900px;
 	margin:auto;
@@ -106,4 +109,47 @@ input:focus {
 	font-size:14px;
 	margin-top:20px;
 	display:block;
-}	
+}
+
+.modelsList {
+	margin-top: 20px;
+}
+
+.model-file {
+	background:#555;
+	width: 300px;
+	height: 250px;
+}
+
+.model-meta {
+	color:#fff;
+	padding-top:200px;
+	height:50px;
+	line-height:50px;
+}
+
+.meta-desc {
+	margin: 0px 10px 0px 10px;
+}
+
+.model-meta-name {
+	float:left;
+	width:100px;
+}
+.meta-love-icon {
+	display:inline-block;
+	width:40px;
+	height: 40px;
+	vertical-align:bottom;
+	background:url('/icons/love.png') no-repeat;
+}
+
+.model-meta-love {
+	float:right;
+	text-align:right;
+	width:100px;
+}
+
+.model-meta-love:hover {
+	color:#e74c3c;
+}
