--- a/OGV/client/templates/menu.html
+++ b/OGV/client/templates/menu.html
@@ -1,7 +1,7 @@
 <template name = "menu">
 	<header class = "universal-header">
 		<div class = "page-container">
-			<a class="logo" id="header-logo"> OGV </a>
+			<a class="logo" id="header-logo" href="/"> OGV </a>
 		</div>
 	</header>
 </template>
