--- a/OGV/client/templates/uploader.html
+++ b/OGV/client/templates/uploader.html
@@ -1,5 +1,6 @@
 
 <template name="uploader">
+		<h2> Upload </h2>
 		<input class="form-control" type="file" id="uploader-fileselect" />
 	{{> filemanager}}
 </template>
