--- a/OGV/client/templates/authentication/logout.html
+++ b/OGV/client/templates/authentication/logout.html
@@ -1,3 +1,6 @@
 <template name="logOut">
+	<div class = "primary-container">
 	<button class="btn btn-default log-out" id="log-out"> Log Out </button>
+	<a class ="meta-links" href="/upload"> Upload your models </a> 
+	</div>
 </template>
