solved the reset password form problems

--- a/OGV/client/templates/authentication/resetpassword.html
+++ b/OGV/client/templates/authentication/resetpassword.html
@@ -3,7 +3,7 @@
 		
 		<form action="/reset-password" class="primary-form" id="reset-password-form" method="post">
 			<input class="password form-control" id="reset-password-password" name="password" placeholder=" Your new password " type="password">
-			<input class="password form-control" id="reset-pasword-confirm" name="passwordConfirm" placeholder= "Retype your password" type="password">
+			<input class="password form-control" id="reset-password-confirm" name="passwordConfirm" placeholder= "Retype your password" type="password">
 			<button class="btn primary-btn btn-default" type="submit"> Reset Password </button>
 		</form>
 	</div>
