--- a/OGV/client/templates/authentication/login.html
+++ b/OGV/client/templates/authentication/login.html
@@ -7,8 +7,8 @@
 			<input class= "primary-input password" id="log-in-password" type="password" name="password" placeholder="password">
 			<button class="btn btn-default primary-input primary-btn" type="submit"> Log In </button>
 		</form>
-		<a class = "meta-links" id="show-forgot-password" href="forgot-password" > Forgot Password </a>
-		<a class = "meta-links" id="show-sign-up" href="sign-up" > Sign Up </a>
+		<a class = "meta-links" id="show-forgot-password" href="/forgot-password" > Forgot Password </a>
+		<a class = "meta-links" id="show-sign-up" href="/sign-up" > Sign Up </a>
 	</div>
 	{{else}}
 		{{>logOut}}
