added modelviewer template and route

--- a/OGV/client/styles/styles.css
+++ b/OGV/client/styles/styles.css
@@ -132,11 +132,14 @@ input:focus {
 
 .meta-desc {
 	margin: 0px 10px 0px 10px;
+	height:50px;
 }
 
 .model-meta-name {
 	float:left;
 	width:100px;
+	color:#fff;
+	overflow:hidden;
 }
 .meta-love-icon {
 	display:inline-block;
