--- a/OGV/client/templates/filemanager.html
+++ b/OGV/client/templates/filemanager.html
@@ -11,7 +11,7 @@
 <template name ="aboutModel">
      <div class="model-file .col-xs-3">
 	<div class = "model-meta">
-		<span class = "model-meta-name meta-desc"> {{name}} </span>
+		<a class = "model-meta-name meta-desc" href="models/{{_id}}"> {{name}}  </a>
 		<span class = "model-meta-love meta-desc">
 			<span class = "meta-love-icon meta-icon"> </span>
 			 {{lovemeter}} 
