modified the look of modelViewer, added axes,grid etc

--- a/OGV/client/styles/styles.css
+++ b/OGV/client/styles/styles.css
@@ -31,7 +31,10 @@ h2 {
 .universal-header {
 	width:100%;
 	height: 40px;
-	background:#555;
+	background:#333;
+	position:fixed;
+	top:0;
+	z-index:1000;
 }
 
 #header-logo {
@@ -207,4 +210,12 @@ input:focus {
     transform: rotate(-360deg);
     -webkit-transform: rotate(-360deg);
   }
+}
+
+#model-container {
+ 	position:fixed;
+	left:0;
+	top:0;
+	z-index: 900;
+
 }
