--- a/OGV/client/templates/menu.html
+++ b/OGV/client/templates/menu.html
@@ -2,6 +2,9 @@
 	<header class = "universal-header">
 		<div class = "page-container">
 			<a class="logo" id="header-logo" href="/"> OGV </a>
+			<span class = "right-menu">
+				<a class="rm-item" id="upload-icon" href ="/upload"> <img src="/icons/upload.png" width="30px" height="30px"/>  </a>
+			</span>
 		</div>	
 	</header>
 </template>
