adds objFiles to a separate collection

--- a/OGV/client/templates/filemanager.html
+++ b/OGV/client/templates/filemanager.html
@@ -21,7 +21,7 @@
 </template>
 
 <template name ="love">
-	<span class ="lovemeter" id ="lovemeter-{{id}}">
+	<span class ="lovemeter" id ="lovemeter-{{_id}}">
 		13
 	</span>
 </template>
