--- a/OGV/client/styles/styles.css
+++ b/OGV/client/styles/styles.css
@@ -18,6 +18,7 @@ a:hover {
 
 h2 {
 	color:#e74c3c;
+	font-family:'Open Sans Light', 'sans-serif';
 }
 .page-container {
 	max-width:900px;
@@ -240,4 +241,21 @@ input:focus {
 	top:0;
 	z-index: 900;
 
+}
+
+.dropzone-text{
+	color: #333;
+	text-align:center;
+	font-family:'Open Sans', 'sans-serif';
+	font-size:22px;
+	margin-top:100px;
+}
+
+.dropzone{
+	background-color: #fff;
+}
+
+#fileInput{
+	float: right;
+	margin-top: -40px;
 }
