Added log-in and log-out icons to the upper right menu

--- a/OGV/client/styles/styles.css
+++ b/OGV/client/styles/styles.css
@@ -259,3 +259,17 @@ input:focus {
 	float: right;
 	margin-top: -40px;
 }
+
+.rm-log-out{
+	background: #333;
+	border: none;
+	height: inherit;
+}
+
+.rm-log-in{
+	color:#fff;
+}
+
+.rm-log-in:hover{
+	background-color:#333;
+}
