Fixed filemanager bug and added comment icon in model feed

--- a/OGV/client/styles/styles.css
+++ b/OGV/client/styles/styles.css
@@ -168,12 +168,19 @@ input:focus {
 	color:#fff;
 	overflow:hidden;
 }
-.meta-love-icon {
+.meta-icon {
 	display:inline-block;
 	width:40px;
 	height: 40px;
 	vertical-align:bottom;
+}
+
+.meta-love-icon{
 	background:url('/icons/love.png') no-repeat;
+}
+
+.meta-comment-icon{
+	background:url('/icons/Chat.png') no-repeat;
 }
 
 .model-meta-love {
