--- a/OGV/client/styles/styles.css
+++ b/OGV/client/styles/styles.css
@@ -94,19 +94,34 @@ h2 {
 	margin-top:10%;
 }
 
-.primary-form input, .primary-form button {
+.primary-form input, .primary-form button, .secondary-form input, .secondary-form button, textarea {
 	display:block;
 	width:100%;
-	height: 40px;
+	min-height: 40px;
 	line-height:40px;
 	margin-top:20px;
-	border-radius:0px;
-	box-shadow:none;
 	text-align: center;
 	border:0px;
-	border-left: 1px solid #e74c3c;
+	border-radius: 3px;
 	padding:0px 0px;
 	font-family: 'open sans',sans-serif;
+}
+
+textarea {
+	line-height:1.5;
+}
+.secondary-form {
+	max-width: 400px;
+	margin:30px 30px;
+	margin:auto;
+	display:block;
+}
+
+
+.help-text {
+	font-size: 14px;
+	font-style: italic;
+	color: #ccc;
 }
 
 .primary-btn {
