added comments and improved code

--- a/OGV/client/styles/styles.css
+++ b/OGV/client/styles/styles.css
@@ -19,8 +19,9 @@ a:hover {
 
 h2 {
 	color:#e74c3c;
-	font-family:'Open Sans Light', 'sans-serif';
+	font-weight:300;
 }
+
 .page-container {
 	max-width:900px;
 	margin:auto;
@@ -109,7 +110,9 @@ h2 {
 
 textarea {
 	line-height:1.5;
+	min-height: 100px;
 }
+
 .secondary-form {
 	max-width: 400px;
 	margin:30px 30px;
@@ -137,6 +140,24 @@ textarea {
 	color:#fff;
 	background:#e75c4c;
 }
+
+.secondary-btn {
+    background:#e74c3c;
+    font-size:16px;
+    color:#fff;
+    height:32px;
+    line-height:32px;
+    text-shadow:none;
+    padding-top:0px;
+    box-shadow:none;
+}
+
+.secondary-btn:hover{
+    background:#e74c3c;
+    color:#fff;
+}
+    
+
 .primary-branding {
 	font-size: 24px;
 	font-family: 'megrim',cursive;
@@ -163,6 +184,8 @@ input:focus {
 	height: 250px;
 	float:left;
 	margin: 5px 5px;
+    background-size:cover;
+    background-repeat:no-repeat;
 }
 
 .model-meta {
@@ -275,7 +298,8 @@ input:focus {
 }
 
 .dropzone{
-	background-color: #fff;
+	background: #fff url('/icons/upload-big.png') no-repeat center;
+	border: 5px dotted #f7f7f7;
 }
 
 #fileInput{
@@ -298,12 +322,80 @@ input:focus {
 }
 
 .feed-wrapper{
-	width: 800px;
-	margin-top: 50px;
-	padding-bottom: 30px;
-	margin-left: auto;
+     font-size: 14px;
+	color: #555;
+	margin-left: 5px;
+	line-height: 1.5;   
+	max-width: 700px;
+    margin:50px auto 50px auto;
 }
 
+.feed-item {
+    margin:10px 0px 10px 0px;
+}
+
+.post-section{
+    float:left;
+    margin-left:10px;
+}
+
+
+
+.post-meta {
+    padding:5px 5px;
+    font-size:12px;
+    font-style:italic;
+    color:#888;
+}
+
+.post-sidebar {
+    width:100px; /* at screens less than 600px it will be 100% */
+}
+
+.user-image{
+	width: 70px;
+	height:70px;
+	background: #333;
+	border-radius:50%;
+}    
+
+.post-content {
+    padding:10px 10px;
+    max-width:500px;
+    background:#fff;
+    border-radius:5px;
+    border: 1px solid #dadada;
+}
+
+
+.model-preview {
+    margin: 10px 0px 10px 0px;
+    height:250px;
+    background-repeat:no-repeat;
+    background-size:contain;
+    background-position:center;    
+    background-color:#333;
+    border: 1px solid #ccc;
+}
+
+.model-preview-link{
+	text-align:center;
+	
+}
+  
+.model-name{
+    padding-top:90px;
+    color: #fff;
+	text-transform: capitalize;
+	font-weight: 300;
+	font-size: 25px;
+    height:160px;
+}
+.model-link-text{
+    background-color: rgba(0,0,0,0.2);
+   display:block;
+}
+/*
 .user-info, .model-info, .love-share{
 	float:left;
 	padding: 15px;
@@ -315,31 +407,16 @@ input:focus {
 	width: 100px;
 }
 
-.user-image{
-	width: 70px;
-	height:70px;
-	background: #333;
-	border-radius:50%;
-}
 
-.model-name{
-	text-align:center;
-	margin-top: 90px;
-	color: #fff;
-	text-transform: capitalize;
-	font-weight: 300;
-	font-size: 25px;
-	background-color: rgba(0,0,0,0.2);
-}
 
+.model-post {
+    max-width:600px;
+}
 .model-info{
-	background: #fff;
-	margin-top: 15px;
-	box-shadow: 3px 3px 2px 2px #ccc;
 }
 
 .feed-model-preview{
-	width: 500px;
+	width: 100%;
 	height: 250px;
 }
 
@@ -347,13 +424,51 @@ input:focus {
 	margin-left: 5px;
 }
 
-.model-description{
+.post-description{
 	width:500px;
+    margin-top:10px;
+    display:block;
+    
 }
 
-.model-description > p{
+.post-description > p{
+    width:100%;
 	font-size: 14px;
 	color: #555;
 	margin-left: 5px;
 	line-height: 1.5;
+}
+*/    
+.comments {
+    display:none;
+    overflow:hidden;
+}
+
+.comments-header {
+    border-radius:5px;
+    display:block;
+}
+
+.comments-header:hover {
+    cursor:pointer;
+    background:rgba(231,76,60,0.1);
+}
+
+.comment-item{
+    text-align:left;
+    padding:5px 5px 5px 10px;
+    margin-top:10px;
+    background:#eaeaea;
+    border-radius:5px;
+}
+.comment-meta{
+    padding-top:10px;    
+    color:#666;
+    font-size:12px;
+    font-style:italic;
+    color:#8a8a8a;
+}
+
+.author{
+    color:#333;
 }
