--- a/OGV/client/templates/model_feed.html
+++ b/OGV/client/templates/model_feed.html
@@ -24,6 +24,9 @@
 		<div class="post-item">
 		<p class="post-text post-subitem"> {{ about }} </p>
 		</div>
+        <div class="post-item love-wrapper">
+            {{> lovemeter }}
+        </div>
         <div class="post-item comments-wrapper">
         {{> comments }}    
         </div>
