--- a/OGV/client/templates/filemanager.html
+++ b/OGV/client/templates/filemanager.html
@@ -1,5 +1,6 @@
 <template name="filemanager">
     <div class="modelsList container-fluid">
+	<h1>My models</h1>
 	<div class = "models row">
 	{{#each models}}
 		{{#if converted }}
