--- a/OGV/client/templates/modelViewer.html
+++ b/OGV/client/templates/modelViewer.html
@@ -1,3 +1,25 @@
 <template name = "modelViewer">
-	<div id="model-container"> </div>
+	<div id="model-container">
+	<div class="secondary-menu">
+		<div class="sm-item">
+			<img src="/icons/Download.png" width="35px" height="35px">
+			<p class="sm-menu-text">Download</p>
+		</div>
+
+		<div class="sm-item">
+			<img src="/icons/Shape-Heart.png" width="35px" height="35px">
+			<p class="sm-menu-text">Love</p>
+		</div>
+
+		<div class="sm-item">
+			<img src="/icons/Message.png" width="35px" height="35px">
+			<p class="sm-menu-text">Comment</p>
+		</div>
+
+		<div class="sm-item">
+			<img src="/icons/Link.png" width="35px" height="35px">
+			<p class="sm-menu-text">Link</p>
+		</div>
+	</div>
+	</div>
 </template>
