show model feed if logged in

--- a/OGV/client/templates/authentication/signup.html
+++ b/OGV/client/templates/authentication/signup.html
@@ -14,6 +14,6 @@
 		<a class = "meta-links" id="show-forgot-password" href="forgot-password" > Forgot Password </a>
 	</div>
 	{{else}}
-		{{> logOut}}
+		{{> modelFeed}}
 	{{/unless}}
 </template>
