--- a/OGV/client/templates/authentication/login.html
+++ b/OGV/client/templates/authentication/login.html
@@ -11,6 +11,6 @@
 		<a class = "meta-links" id="show-sign-up" href="/sign-up" > Sign Up </a>
 	</div>
 	{{else}}
-		{{>logOut}}
+		{{>modelFeed}}
 	{{/unless}}
 </template>
