improved the converted flag, now it's true at 70% conversion

--- a/OGV/client/templates/model_feed.html
+++ b/OGV/client/templates/model_feed.html
@@ -2,7 +2,9 @@
     <div class="feed-wrapper">
     {{#if models}}
 	{{#each models}}
-	    {{> modelPost }}
+	    {{#if converted }}
+		{{> modelPost }}
+	    {{/if}}
 	{{/each}}
     {{else}}
 	<h3>OGV is hungry, <a href="/upload">feed some models</a></h3>
