--- a/OGV/client/templates/filemanager.html
+++ b/OGV/client/templates/filemanager.html
@@ -13,18 +13,7 @@
 
 <template name ="aboutModel">
      <div class="model-file .col-xs-3">
-	<div class = "model-meta">
-		<a class = "model-meta-name meta-desc" href="/models/{{_id}}"> {{ name }}  </a>
-		<span class = "model-meta-love meta-desc">
-			<span class = "meta-love-icon meta-icon"> </span>
-			 {{> love}} 
-		</span>
-	</div>
+	{{> modelView }}
      </div>
 </template>
 
-<template name ="love">
-	<span class ="lovemeter" id ="lovemeter-{{_id}}">
-		13
-	</span>
-</template>
