--- a/OGV/client/templates/dashboard.html
+++ b/OGV/client/templates/dashboard.html
@@ -1,27 +1,23 @@
 <template name ="dashboard">
 	<div class="dashboard-module">
-		<form action="/dashboard" class="secondary-form" id="dash-form" method="post">
+		<form action="/dashboard" class="secondary-form" id="dash-user-form" method="post">
 		
 			<h3 class="secondary-form-head"> User Settings </h3>
 		
 										
 			<label for="user-bio" class ="input-head"> Short Bio </label>
-			<textarea class="form-control" id="dash-short-bio" name="shortBio" placeholder="Write a small something about yourself within 140 characters"></textarea>
-			<label for="profile-pic" class ="input-head"> Profile Pic </label>
-			<p class ="help-text"> Upload a photo of size not more than 300 X 300 </p>
-			<img src = ""/>	
-			<input class="form-control profile-pic" id="dash-profile-pic" name="profilePic" type="file">
+			<textarea class="form-control" id="dash-short-bio" name="shortBio"> {{ currentUser.profile.bio }} </textarea>
 
 			<label for="username" class ="input-head"> Username </label>
 			<p class ="help-text"> What you want to be known as around </p>	
-			<input class="form-control username" id="dash-username" name="username" placeholder="username" type="text">
+			<input class="form-control username" id="dash-username" name="username" value = " {{ currentUser.profile.name }}"  type="text">
+
 			
-			<label for="first-name" class ="input-head"> First Name </label>
-			<input class="form-control first-name" id="dash-first-name" name="firstName" placeholder="First name" type="text">
+			<label for="profile-pic" class ="input-head"> Profile Pic </label>
+			<p class ="help-text"> Upload a photo of size not more than 300 X 300 </p>
+			<div class = "user-profile-pic" style=" background: url({{profilePic}})" > </div> 	
+			<input class="form-control profile-pic" id="dash-profile-pic" name="profilePic" type="file">
 			
-			
-			<label for="last-name" class ="input-head"> Last Name </label>
-			<input class="form-control last-name" id="dash-last-name" name="lastName" placeholder="Last name" type="text">
 			<button class="btn primary-btn btn-default" type="submit"> Save User Settings </button>
 			
 			
@@ -29,7 +25,7 @@
 		</form>
 	</div>
     {{#if isInRole 'admin' }}
-		<form action="/dashboard" class="secondary-form" id="dash-form" method="post">
+		<form action="/dashboard" class="secondary-form" id="dash-admin-form" method="post">
 			
 		<h3 class ="secondary-form-head"> Admin Settings </h3>
 			 
