--- a/OGV/client/styles/styles.css
+++ b/OGV/client/styles/styles.css
@@ -373,6 +373,9 @@ input:focus {
 	width: 70px;
 	height:70px;
 	background: #333;
+	border: 1px solid #333;
+	background-size:cover !important;
+	background-position: center !important;	
 	border-radius:50%;
 }    
 
