--- a/OGV/client/templates/model_feed.html
+++ b/OGV/client/templates/model_feed.html
@@ -16,7 +16,7 @@
 <template name ="modelPost">
     <div class="feed-item model-post">
       <div class="post-section post-sidebar user-info">
-		<div class="post-item user-image"></div>
+		<div class="post-item user-image" style="background:url('{{userImg}}');"></div>
 		<div class="post-item post-meta user-meta"></div>
       </div>
 	    
