improved comments and lovemeter styling

--- a/OGV/client/styles/styles.css
+++ b/OGV/client/styles/styles.css
@@ -468,23 +468,30 @@ input:focus {
 	color: #555;
 	margin-left: 5px;
 	line-height: 1.5;
-}
-*/    
+}*/
+.comments-wrapper {
+	margin-top:10px;
+}    
 .comments {
     display:none;
     overflow:hidden;
 }
 
 .comments-header {
+    line-height:30px;
     border-radius:5px;
     display:block;
+    padding-left: 10px;
+    height:30px;
 }
 
 .comments-header:hover {
     cursor:pointer;
     background:rgba(231,76,60,0.1);
 }
-
+.comments-icon {
+    float:left;
+}
 .comment-item{
     text-align:left;
     padding:5px 5px 5px 10px;
