--- a/OGV/client/templates/comment.html
+++ b/OGV/client/templates/comment.html
@@ -1,6 +1,9 @@
-<template name ="comments">     
+<template name ="comments"> 
+	<div class="comments-icon"> 
+	     <img src="/icons/Chat.png"/> 
+	</div>
+
 	<div class ="comments-header">
-		<img src="/icons/Chat.png"/> 
 		<span class="comments-header-text"> Show comments</span>
 	</div>
      
