--- a/OGV/client/templates/dashboard.html
+++ b/OGV/client/templates/dashboard.html
@@ -3,7 +3,6 @@
 		<form action="/dashboard" class="secondary-form" id="dash-user-form" method="post">
 		
 			<h3 class="secondary-form-head"> User Settings </h3>
-		
 										
 			<label for="user-bio" class ="input-head"> Short Bio </label>
 			<textarea class="form-control" id="dash-short-bio" name="shortBio"> {{ currentUser.profile.bio }} </textarea>
@@ -18,10 +17,7 @@
 			<div class = "user-profile-pic" style=" background: url({{profilePic}})" > </div> 	
 			<input class="form-control profile-pic" id="dash-profile-pic" name="profilePic" type="file">
 			
-			<button class="btn primary-btn btn-default" type="submit"> Save User Settings </button>
-			
-			
-			
+			<button class="btn primary-btn btn-default" type="submit"> Save User Settings </button>	
 		</form>
 	</div>
     {{#if isInRole 'admin' }}
@@ -33,25 +29,25 @@
 			<p class ="help-text"> 
 				What do you want to call your website ?				
 			</p>	
-			<input class="form-control" id="dash-primary-branding" name="primaryBranding" placeholder="Online Geometry Viewer" type="text">
+			<input class="form-control" id="dash-primary-branding" name="primaryBranding" value ="{{ settings.siteName }}" type="text">
 
 			<label for="mail_url" class ="input-head"> Mail Url </label>
 			<p class ="help-text"> Mail_Url provides authentication to email-id from where emails shall be sent to users. It's in format 
 				<code> http://username:password@example.com:25 </code>
 			</p>	
-			<input class="form-control mail_url" id="dash-mail-url" name="mailUrl" placeholder="http://username:password@example.com:25" type="text">
+			<input class="form-control mail_url" id="dash-mail-url" name="mailUrl"  type="text" value="{{ settings.mailUrl }} " >
 			 
 			<label for="g_obj-path" class="input-head"> g-obj Path </label>
 			<p class ="help-text"> Type command  
 				<code> which g-obj </code> to get path of g-obj convertor in your server. BRL-CAD must already be installed for OGV to work.
 			</p>
-			<input class="form-control g_obj-path" id="dash-g-obj-path" name="gObjPath" placeholder="Path to your g-obj binary" type="text">
+			<input class="form-control g_obj-path" id="dash-g-obj-path" name="gObjPath" value="{{settings.gobjPath }}" type="text">
 			
 			<label for="mged-path" class="input-head"> mged Path </label>
 			<p class ="help-text"> Use the command 
 				<code> which mged</code> to get path of mged. 
 			</p>
-			<input class="form-control mged-path" id="dash-mged-path" name="mgedPath" placeholder="Path to your mged binary" type="text">
+			<input class="form-control mged-path" id="dash-mged-path" name="mgedPath" value="{{settings.mgedPath}}" type="text">
 
 			<button class="btn primary-btn btn-default" type="submit"> Save Admin Settings </button>
 		</form>
