--- a/OGV/client/templates/primarybranding.html
+++ b/OGV/client/templates/primarybranding.html
@@ -1,3 +1,3 @@
 <template name="primaryBranding">
-	<h2 class = "primary-branding">Online Geometry Viewer </h2>
+	<h2 class = "primary-branding"> {{ primaryBranding }} </h2>
 </template>
