applied new notification system to all the views

--- a/OGV/client/styles/styles.css
+++ b/OGV/client/styles/styles.css
@@ -79,15 +79,12 @@ h2 {
 }
 
 .secondary-menu{
-	max-width:450px;
 	position:absolute;
-	margin-top:50px;
-	left:40%;
+	margin-top:100px;
 }
 
 .sm-item{
-	float:left;
-	padding-left:10px;
+	padding-bottom:10px;
 	width:100px;
 	text-align: center;
 }
