--- a/OGV/client/templates/notifications.html
+++ b/OGV/client/templates/notifications.html
@@ -1,5 +1,5 @@
 <template name ="notifications">
-	<div class="errors row-fluid">
+	<div class="notifications row-fluid">
 		{{#each notifications}}
 			{{> notification}}
 		{{/each}}
