--- a/OGV/client/styles/styles.css
+++ b/OGV/client/styles/styles.css
@@ -89,11 +89,20 @@ h2 {
 	text-align: center;
 }
 
+.sm-item:hover {
+	cursor: pointer;
+}
+
 .sm-menu-text{
 	color:#e3e3e3;
 	margin-top:10px;
 	font-size:14px;
 }
+
+.sm-item:hover > .sm-menu-text{
+	color:#e74c3c;
+}
+
 .ogv-status{
 	max-width: 400px;
 	margin:auto;
@@ -105,6 +114,14 @@ h2 {
 	line-height:30px;
 }
 
+.notifications {
+	max-width:700px;
+	position:relative;
+	margin:auto;
+	margin-top:60px;
+	z-index:1100;
+	word-wrap:break-word;	
+}
 .primary-container {
 	max-width:280px;
 	margin:auto;
@@ -466,6 +483,38 @@ input:focus {
 	margin-left: 5px;
 	line-height: 1.5;
 }*/
+#overlay-comments {
+	position:fixed;
+	background:rgba(255,255,255,0.5);
+	bottom:-10000px;
+	right:0px;
+	max-height:600px;
+	border-radius:5px;
+	min-width: 300px;
+	max-width: 600px;
+	z-index: 950;
+	padding: 20px 20px;
+	padding-top:50px;
+	overflow-y:auto;
+	max-height:90%;
+}
+
+#comments-close-button {
+	margin-right:-10px;
+	cursor:pointer;
+	color:#fff;
+	text-align:center;
+	line-height:25px;
+	background:#e74c3c;
+	width:25px;
+	height:25px;
+	float:right;
+	border-radius:50%;
+}
+
+#overlay-comments .comments {
+ 	display:block;
+}
 .comments-wrapper {
 	margin-top:10px;
 }    
