--- a/OGV/client/templates/filemanager.html
+++ b/OGV/client/templates/filemanager.html
@@ -1,4 +1,4 @@
-<template name="filemanager">
+<template name="ogvFilemanager">
     <div class="modelsList container-fluid">
 	<h1>My models</h1>
 	<div class = "models row">
